--- a/style.css
+++ b/style.css
@@ -107,8 +107,10 @@ padding: 20px;
 
 
 .button{
+    font-size: 20px;
     background-color: grey;
-    border-radius: 2px;
-    padding: 2px 5px;
+    border-radius: 5px;
+    padding: 10px 15px;
     color: black;
+    text-decoration: none;
 }
